K8/auth-service-deployment.yaml

# Deployment for the Auth Microservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      serviceAccountName: auth-service-sa
      containers:
        - name: auth-service
          image: shwetik/auth-service:v1.3
          ports:
            - containerPort: 3000  # Container port
      imagePullSecrets:
        - name: regcred2

---

# Service for exposing Auth Microservice internally
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80  # External service port
      targetPort: 3000  # Container port
  type: ClusterIP
