K8/user-management-deployment.yaml

# Deployment for the User Management Microservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      serviceAccountName: user-management-sa
      containers:
        - name: user-management
          image: shwetik/user-management:v5
          ports:
            - containerPort: 3000  # Container port
      imagePullSecrets:
        - name: regcred2

---

# Service for exposing User Management Microservice internally
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
  namespace: default
spec:
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 80  # External service port
      targetPort: 3000  # Container port
  type: ClusterIP
